# meli-proxy

./: .coveragerc  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Architecture.md  CHALLENGE.md  Dockerfile  README.md  TODO.md  black.toml  docker-compose.override.yml  docker-compose.single.override.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  result-2k.json  result-2k.json.html  result-500.json  result-500.json.html  result-limit.json  result-limit.json.html  results-warmup.json  results-warmup.json.html  run-load.ps1  run-load.sh  tox.ini
app/: fast_api.py
app/core/: config.py
app/infrastructure/: redis_client.py
app/presentation/: proxy.py
app/presentation/api/dependencies/: __init__.py  admin_auth.py
app/presentation/api/middlewares/: rate_limit.py
app/presentation/api/routes/: __init__.py  health.py  rate_limits.py
app/presentation/schemas/: __init__.py  rate_limits.py
deploy/compose/: cluster.env
deploy/grafana/provisioning/dashboards/: meli-proxy-overview.json  provider.yml
deploy/load/: artillery-50k.yml  load-2k.yml  load-500.yml  load-limit.yml  load-warmup.yml
deploy/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: f1fbcd4c6a11_added_new_models.py
tests/: test_config_settings.py  test_fast_api_app.py  test_health.py  test_proxy.py  test_rate_limit_admin.py  test_redis_client.py  test_register_routes.py
